syntax = "proto3";
package models;

option go_package = "gitlab.com/alphaticks/alpha-connect/models";

import "gitlab.com/alphaticks/xchanger/models/xchanger.proto";

message Account {
    string portfolio = 1;
    string name = 2;
    models.Exchange exchange = 3;
    models.APICredentials api_credentials = 4;
    models.STARKCredentials stark_credentials = 5;
    models.ECDSACredentials ecdsa_credentials = 6;
}
